# viewport-browser

./: README.md  SKILL.md  pyproject.toml
src/viewport_browser/: browser.py  dashboard.py  server.py
src/viewport_desktop/: desktop.py  server.py  vision.py
web/src/openeyes_web/: browser.py  dashboard.py  server.py
