[project]
name = "viewport-browser"
version = "0.1.0"
description = "Vision-first web browser for AI agents. See what your agents see."
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "playwright>=1.40.0",
    "Pillow>=10.0.0",
    "websockets>=12.0",
]

[project.scripts]
viewport-browser = "viewport_browser.server:main"
viewport-dashboard = "viewport_browser.dashboard:main"
viewport-serve = "viewport_browser.server:serve"
viewport-desktop = "viewport_desktop.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/viewport_browser", "src/viewport_desktop"]
